--- a/web/sass/styles.scss
+++ b/web/sass/styles.scss
@@ -20,13 +20,26 @@ a {
   color: inherit;
 }
 
+html {
+  overflow-y: scroll;
+  touch-action: manipulation;
+}
+
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 body {
     font-family: $font;
     background-color: #f5f5f5;
-    font-size: .2in;
-    overflow-y: scroll;
+    font-size: 100%;
     padding: 0;
     margin: 0;
+
+    @include desktop {
+      font-size: 120%;
+    }
 }
 
 *:focus {
@@ -42,15 +55,6 @@ body {
     width: 100%;
   }
 
-  @include tablet {
-    font-size: 125%;
-    width: 100%;
-  }
-
-  @include mobile {
-    font-size: 200%;
-    width: 100%;
-  }
 }
 
 input {
